# NGS_pipeline

./: .gitignore  README.md  config_builder.py  environment.yml  ngs_driver.py  pyproject.toml  setup.sh  update_env_doc.sh
docs/: TODOs.md  config_template.json  template_slurm_submission.sh
src/: utils.py
src/lib/: aligner.py  association_analysis.py  fastq_benchmarks.py
src/pipeline/: main.py  utils.py
src/pipeline/alignment/: aligner.py
src/pipeline/analysis/: analysis.py
src/pipeline/processing/: fastqc_processing.py
src/pre-processing/: Fastq_convert.py  trimmer.py
tests/: test_basics.py
tests/test_data/: x98_query.fasta
